<resources>
    <string name="app_name">Seagull</string>
    <string name="daily">Daily</string>
    <string name="you">You</string>
    <string name="settings">settings</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="todo_design">We should create design for this … now looks weird : (</string>
    <string name="recipe_transition_name">recipe_transition</string>
    <string name="recipe_photo_transition_name">recipe_photo_transition</string>
    <string name="breakfast_transition_name">breakfast_tr</string>
    <string name="recipe_name_transition_name">recipe_name_transition_name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_demo">UserName</string>
    <string name="favorites">Favorites</string>
    <string name="current">Current</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
</resources>