<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/breakfast_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/google_breakfast"
        android:transitionName="@string/breakfast_transition_name"
        app:layout_constraintBottom_toTopOf="@id/lunch_card"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10" />

    <TextView
        android:id="@+id/breakfast_card_title"
        style="@style/DailyCardsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:elevation="4dp"
        android:text="@string/breakfast"
        app:layout_constraintLeft_toLeftOf="@id/breakfast_card"
        app:layout_constraintTop_toTopOf="@id/breakfast_card" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/lunch_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/google_lunch"
        app:layout_constraintBottom_toTopOf="@id/dinner_card"
        app:layout_constraintTop_toBottomOf="@id/breakfast_card"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10" />

    <TextView
        android:id="@+id/lunch_card_title"
        style="@style/DailyCardsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:elevation="4dp"
        android:text="@string/lunch"
        app:layout_constraintLeft_toLeftOf="@id/lunch_card"
        app:layout_constraintTop_toTopOf="@id/lunch_card" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/dinner_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/google_dinner"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lunch_card"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10" />

    <TextView
        android:id="@+id/dinner_card_title"
        style="@style/DailyCardsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:elevation="4dp"
        android:text="@string/dinner"
        app:layout_constraintLeft_toLeftOf="@id/dinner_card"
        app:layout_constraintTop_toTopOf="@id/dinner_card" />

</androidx.constraintlayout.widget.ConstraintLayout>